--- a/frontend/src/components/navbar/Navbar.css
+++ b/frontend/src/components/navbar/Navbar.css
@@ -3,7 +3,7 @@
     top: 0;
     right: 0;
     width: 100%;
-    background-color: #333;
+    background-color: #532BA9;
     padding: 10px;
     display: flex;
     justify-content: left;
@@ -18,7 +18,7 @@
   }
   
   .nav-left .nav-item {
-    margin-right: 20px;
+    margin-left: 25px;
   }
   
   .nav-right {
@@ -28,14 +28,14 @@
   }
   
   .nav-right .nav-item {
-    margin-right: 20px;
+    margin-right: 30px;
   }
   
     
   .nav-link {
     color: white;
     text-decoration: none;
-    font-size: 18px;
+    font-size: 20px;
   }
   
   .nav-link:hover {
