--- a/frontend/src/pages/Sign In/SingIn.css
+++ b/frontend/src/pages/Sign In/SingIn.css
@@ -46,7 +46,7 @@
     background-color: rgba(255, 255, 255, 0.3);
   }
   
-  .input-container {
+  .signin-input-container {
     display: flex;
     width: 400px;
     height: 510px;
