--- a/frontend/src/components/usertile/UserTile.css
+++ b/frontend/src/components/usertile/UserTile.css
@@ -12,5 +12,13 @@
     align-items: center;
     /*justify-content: space-between;*/
   }
+
+  .status-message {
+    font-size: 16px;
+    color: white;
+    margin-top: -25px;
+    width: 94%;
+    text-align: left;
+  }
   
  
