--- a/frontend/src/pages/Sign In/SingIn.css
+++ b/frontend/src/pages/Sign In/SingIn.css
@@ -9,9 +9,9 @@
   
   .user-tile input {
     width: 94%;
-    height: 38px;
-    padding: 12px;
-    margin-bottom: 20px;
+    height: 38x;
+    padding: 15px;
+    margin-bottom: 25px;
     border-radius: 10px;
     border: 1px solid rgba(255, 255, 255, 0.56);
     background: linear-gradient(179deg, rgba(255, 255, 255, 0.18) 0.72%, rgba(255, 255, 255, 0.18) 99.25%);
@@ -33,13 +33,13 @@
     font-style: normal;
     font-weight: 600;
     line-height: normal;
-    border: none;
     cursor: pointer;
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 10px;
     flex-shrink: 0;
+    margin-top: 15px;
   }
   
   .user-tile button:hover {
@@ -49,7 +49,7 @@
   .signin-input-container {
     display: flex;
     width: 400px;
-    height: 510px;
+    height: 530px;
     padding: 10px;
     flex-direction: column;
     align-items: center;
@@ -62,12 +62,11 @@
     display: flex;
     width: 400px;
     height: 260px;
-    padding: 10px;
+    padding: 5px;
     flex-direction: column;
     align-items: center;
     gap: 10px;
     flex-shrink: 0; 
-    
   }
 
 
