--- a/frontend/src/components/usertile/UserTile.css
+++ b/frontend/src/components/usertile/UserTile.css
@@ -10,13 +10,13 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    /*justify-content: space-between;*/
+    justify-content: space-between;
   }
 
   .status-message {
-    font-size: 16px;
+    font-size: 18px;
     color: white;
-    margin-top: -25px;
+    margin-top: -20px;
     width: 94%;
     text-align: left;
   }
