--- a/frontend/src/components/usertile/UserTile.css
+++ b/frontend/src/components/usertile/UserTile.css
@@ -13,6 +13,51 @@
     justify-content: space-between;
   }
 
+  .user-tile h1 {
+    font-size: 36px;
+    font-weight: bold;
+    color: white;
+    text-align: center;
+    margin-top: 8px;
+    margin-bottom: 50px;
+  }
+  
+  .user-tile input {
+    width: 94%;
+    height: 38x;
+    padding: 15px;
+    margin-bottom: 25px;
+    border-radius: 10px;
+    border: 1px solid rgba(255, 255, 255, 0.56);
+    background: linear-gradient(179deg, rgba(255, 255, 255, 0.18) 0.72%, rgba(255, 255, 255, 0.18) 99.25%);
+    font-size: 22px;
+  }
+  
+  .user-tile button {
+    width: 345px;
+    height: 56px;
+    padding: 10px;
+    border: 1px solid rgba(255, 255, 255, 0.56);
+    background: linear-gradient(179deg, rgba(255, 255, 255, 0.23) 0.72%, rgba(255, 255, 255, 0.21) 99.25%);
+    box-shadow: 0px 4px 24px -1px rgba(0, 0, 0, 0.20);
+    border-radius: 20px;
+    color: #FFF;
+    text-align: center;
+    font-family: Inter;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    flex-shrink: 0;
+    margin-top: 15px;
+  }
+
+
   .status-message {
     font-size: 18px;
     color: white;
