--- a/frontend/src/pages/Account Settings/AccSettings.css
+++ b/frontend/src/pages/Account Settings/AccSettings.css
@@ -10,6 +10,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 180px;
   }
   
   .no-image {
@@ -32,10 +33,3 @@
     border-radius: 50%;
     margin-bottom: 20px;
   }
-  
-  .image-upload-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  
