--- a/frontend/src/pages/Account Settings/AccSettings.css
+++ b/frontend/src/pages/Account Settings/AccSettings.css
@@ -33,3 +33,10 @@
     border-radius: 50%;
     margin-bottom: 20px;
   }
+
+  .image-status-message {
+    margin-top: 10px;
+    color: white;
+    font-size: 16px;
+    text-align: center;
+  }
