Some Minor Design Fixes

--- a/frontend/src/components/usertile/UserTile.css
+++ b/frontend/src/components/usertile/UserTile.css
@@ -61,9 +61,9 @@
   .status-message {
     font-size: 18px;
     color: white;
-    margin-top: -20px;
+    margin-top: -10px;
     width: 94%;
-    text-align: left;
+    text-align: center;
   }
   
  
