Refactored Interface, Fixed connection with new picture service

--- a/frontend/src/pages/Sign In/SingIn.css
+++ b/frontend/src/pages/Sign In/SingIn.css
@@ -1,50 +1,34 @@
-  .user-tile button:hover {
-    background-color: rgba(255, 255, 255, 0.3);
-  }
-  
   .signin-input-container {
-    display: flex;
-    width: 400px;
-    height: 530px;
-    padding: 10px;
+    min-width:  22rem; 
+    min-height: 30rem; 
+    padding: 0.5rem;
+    gap: 1vh;
     flex-direction: column;
     align-items: center;
-    gap: 20px;
+    display: flex;
     flex-shrink: 0; 
   }
 
   .password-container {
-   
     display: flex;
-    width: 400px;
-    height: 260px;
-    padding: 5px;
+    min-width:  22rem; 
+    height: 24vh;
+    gap: 0.5vh;
     flex-direction: column;
     align-items: center;
-    gap: 10px;
     flex-shrink: 0; 
   }
 
 
-  .user-tile label {
-    color: #FFF;
-    font-family: Inter;
-    font-size: 24px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: normal;
-    width: 100%;
-    text-align: left;
-    display: block;
-    margin-bottom: 5px;
-  }
-
   .password-status-message {
     font-size: 18px;
     color: white;
-    margin-top: -20px;
-    width: 94%;
+    margin-top: -1rem;
+    min-width:  22rem; 
     text-align: left;
   }
-  
+
+  .user-tile button:hover {
+    background-color: rgba(255, 255, 255, 0.3);
+  }
   
