--- a/frontend/src/pages/Log In/LogIn.css
+++ b/frontend/src/pages/Log In/LogIn.css
@@ -1,11 +1,11 @@
 .login-input-container {
     display: flex;
-    width: 400px;
-    height: 510px;
-    padding: 10px;
+    min-width:  22rem; 
+    min-height: 30rem; 
+    padding: 0.5rem;
     flex-direction: column;
     align-items: center;
-    gap: 30px;
+    gap: 3vh;
     flex-shrink: 0; 
-    margin-top: 30px;
+    margin-top: 1vh;
   }
