--- a/frontend/src/pages/Sign In/SingIn.css
+++ b/frontend/src/pages/Sign In/SingIn.css
@@ -1,19 +1,16 @@
   .signin-input-container {
-    min-width:  22rem; 
-    min-height: 30rem; 
     padding: 2rem;
-    gap: 1vh;
+    gap: 12px;
     flex-direction: column;
     align-items: center;
     display: flex;
     flex-shrink: 0; 
+    margin-bottom: 30px;
   }
 
   .password-container {
-    display: flex;
-    min-width:  22rem; 
-    height: 24vh;
-    gap: 0.5vh;
+    display: flex; 
+    gap: 10px;
     flex-direction: column;
     align-items: center;
     flex-shrink: 0; 
@@ -21,14 +18,45 @@
 
 
   .password-status-message {
-    font-size: 18px;
+    font-size: 14px;
     color: white;
-    margin-top: -1rem;
-    min-width:  22rem; 
+    min-width:  300px; 
     text-align: left;
   }
 
   .user-tile button:hover {
     background-color: rgba(255, 255, 255, 0.3);
+  }
+
+  @media (min-height: 1000px)   {
+    .signin-input-container {
+      min-width:  22rem; 
+      min-height: 30rem; 
+      padding: 2rem;
+      gap: 1vh;
+      flex-direction: column;
+      align-items: center;
+      display: flex;
+      flex-shrink: 0; 
+    }
+  
+    .password-container {
+      display: flex;
+      min-width:  22rem; 
+      height: 24vh;
+      gap: 0.5vh;
+      flex-direction: column;
+      align-items: center;
+      flex-shrink: 0; 
+    }
+  
+  
+    .password-status-message {
+      font-size: 18px;
+      color: white;
+      margin-top: -1rem;
+      min-width:  22rem; 
+      text-align: left;
+    }
   }
   
