--- a/frontend/src/pages/Account Settings/AccSettings.css
+++ b/frontend/src/pages/Account Settings/AccSettings.css
@@ -7,14 +7,20 @@
   }
 
   .username-display {
-    margin-bottom: 1vh;
-    width: 320px;
+    width: 17rem;
     padding: 1px;
-    font-size: 22px;
+    font-size: 1.2rem;
     font-weight: bold;
     color: #ffffff;
     background-color: rgba(255, 255, 255, 0.1);
     border-radius: 8px;
+    text-align: center;
+  }
+
+  .password-container {
+    width: 17rem;
+    font-size: 1.2rem;
+    font-weight: bold;
     text-align: center;
   }
 
@@ -24,11 +30,18 @@
     flex-direction: column;
     align-items: center;
   }
+  .image-upload-container input {
+    width: 17rem;
+    font-size: 1.2rem;
+    text-align: center;
+    text-wrap: wrap;
+    margin-bottom: 1rem;
+  }
   
   .no-image {
-    min-width: 150px;
-    min-height: 150px;
-    font-size: 12px;
+    min-width: 9rem;
+    min-height: 9rem;
+    font-size: 0.8rem;
     margin-bottom: 2vh;
     border: 2px dashed rgba(255, 255, 255, 0.6);
     border-radius: 50%;
@@ -39,8 +52,8 @@
   }
   
   .profile-image {
-    width: 200px;
-    height: 200px;
+    width: 9rem;
+    height: 9rem;
     margin-bottom: 3vh;
     object-fit: cover;
     border-radius: 50%;
@@ -49,7 +62,7 @@
   .image-status-message {
     margin-top: 2vh;
     color: white;
-    font-size: 18px;
+    font-size: 1rem;
     text-align: center;
   }
 
@@ -72,8 +85,8 @@
     }
     
     .no-image {
-      min-width: 10rem;
-      min-height: 10rem;
+      min-width: 9rem;
+      min-height: 9rem;
       font-size: 14px;
       margin-bottom: 2vh;
       border: 2px dashed rgba(255, 255, 255, 0.6);
@@ -85,8 +98,8 @@
     }
     
     .profile-image {
-      width: 18rem;
-      height: 18rem;
+      width: 9rem;
+      height: 9rem;
       margin-bottom: 2vh;
       object-fit: cover;
       border-radius: 50%;
@@ -101,7 +114,7 @@
   
     .username-display {
       margin-bottom: 1vh;
-      width: 22rem;
+      width: 18rem;
       padding: 0.2vh;
       font-size: 24px;
       font-weight: bold;
