--- a/frontend/src/components/usertile/UserTile.css
+++ b/frontend/src/components/usertile/UserTile.css
@@ -1,6 +1,6 @@
 .user-tile {
-    width: 28rem;
-    height: 32rem;
+    width: 22vw;
+    height: 29vw;
     
     padding: 2vh;
     display: flex;
@@ -17,8 +17,8 @@
 
 
   .user-tile h1 {
-    font-size: 32px;
-    margin-top: 0.5rem;
+    font-size: 1.8rem;
+    margin-top: 1rem;
 
     font-weight: bold;
     color: white;
@@ -26,14 +26,14 @@
   }
 
   .user-tile label {
-    min-width:  300px;
-    margin-bottom: 2px;
+    min-width:  16rem;
+    margin-bottom: 0.5rem;
     display: block;
     text-align: left;
 
     color: #FFF;
     font-family: Inter;
-    font-size: 24px;
+    font-size: 1.4rem;
     font-style: normal;
     font-weight: 600;
     line-height: normal;
@@ -41,16 +41,16 @@
 
   
   .user-tile input {
-    min-width: 300px;
-    padding: 8px;
-    font-size: 18px;
+    min-width: 16rem;
+    padding: 2.5%;
+    font-size: 1.4rem;
     border-radius: 10px;
     border: 1px solid rgba(255, 255, 255, 0.56);
     background: linear-gradient(179deg, rgba(255, 255, 255, 0.18) 0.72%, rgba(255, 255, 255, 0.18) 99.25%);
   }
   
   .user-tile button {
-    min-width:  18rem; 
+    min-width:  16rem; 
     min-height: none; 
     padding: 0.4rem;
     margin-top: 0.5rem;
