--- a/frontend/src/pages/Sign In/SingIn.css
+++ b/frontend/src/pages/Sign In/SingIn.css
@@ -1,21 +1,21 @@
   .signin-input-container {
-    padding: 2rem;
-    gap: 12px;
+    padding: 1rem;
+    gap: 0.5rem;
     flex-direction: column;
-    align-items: center;
+    align-items: top;
     display: flex;
     flex-shrink: 0; 
     margin-bottom: 30px;
+    margin-bottom: 5rem;
   }
 
   .password-container {
     display: flex; 
-    gap: 10px;
+    gap: 0.5rem;
     flex-direction: column;
     align-items: center;
     flex-shrink: 0; 
   }
-
 
   .password-status-message {
     font-size: 14px;
