--- a/frontend/src/components/navbar/Navbar.css
+++ b/frontend/src/components/navbar/Navbar.css
@@ -36,3 +36,11 @@
 .nav-link:hover {
   color: #ddddddeb;
 }
+
+@media (min-height: 1000px) {
+  .nav-link {
+    color: white;
+    text-decoration: none;
+    font-size: 1vw;
+  }
+}
