--- a/frontend/src/pages/games/ChimpTest/ChimpTest.css
+++ b/frontend/src/pages/games/ChimpTest/ChimpTest.css
@@ -10,6 +10,13 @@
   width: 100%;
 }
 
+.button-placeholder {
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .game table td {
   width: 70px;
   height: 70px;
