--- a/frontend/src/pages/games/ChimpTest/ChimpTest.css
+++ b/frontend/src/pages/games/ChimpTest/ChimpTest.css
@@ -10,13 +10,6 @@
   width: 100%;
 }
 
-.button-placeholder {
-  height: 60px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
 .game table td {
   width: 70px;
   height: 70px;
@@ -56,6 +49,13 @@
   font-size: 1.2em;
 }
 
+.button-placeholder {
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .message {
   text-align: center;
   font-size: 1.2em;
@@ -76,3 +76,23 @@ p {
   color: white;
 }
 
+.dev-tools {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-top: 20px; 
+  align-items: center; 
+  gap: 15px;
+}
+
+.dev-tools button {
+  font-size: 1.2rem;
+  padding: 10px 20px;
+  cursor: pointer;
+
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.56);
+  background: #643392;
+  box-shadow: 0px 4px 24px -1px rgba(0, 0, 0, 0.20);
+  backdrop-filter: blur(20px);
+}
